qtty-core/tests/fixtures/qtty_derive/missing_dimension.rs
#[derive(Clone, Copy, Debug, PartialEq, PartialOrd, qtty_derive::Unit)]
#[unit(crate = qtty_core, symbol = "bad", ratio = 1.0)]
pub struct MissingDimension;

fn main() {}
